--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,4 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".activities.MainActivity">
 
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/fragment_daily_weather"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:name="nl.avans.mbda.weatherapp.fragments.DailyWeatherFragment"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
