--- a/app/src/main/res/layout/item_daily_weather.xml
+++ b/app/src/main/res/layout/item_daily_weather.xml
@@ -5,50 +5,60 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <ImageView
-        android:id="@+id/weather_icon"
-        android:layout_width="wrap_content"
+    <TextView
+        android:id="@+id/weather_day"
+        android:layout_width="48dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintEnd_toStartOf="@+id/weather_temp_day"
-        app:layout_constraintHorizontal_bias="0.5"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="Mon" />
+
+    <ImageView
+        android:id="@+id/weather_icon"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginVertical="8dp"
+        android:layout_marginStart="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/weather_day"
         app:layout_constraintTop_toTopOf="parent"
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
         android:id="@+id/weather_temp_day"
-        android:layout_width="0dp"
+        android:layout_width="56dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/weather_icon"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="24°C" />
 
     <TextView
-        android:id="@+id/weather_temp_min"
+        android:id="@+id/weather_feel_day"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintStart_toEndOf="@+id/weather_icon"
-        app:layout_constraintTop_toBottomOf="@+id/weather_temp_day"
-        tools:text="20°C" />
+        android:layout_marginEnd="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/weather_rain"
+        app:layout_constraintStart_toEndOf="@+id/weather_temp_day"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="20°" />
 
     <TextView
-        android:id="@+id/weather_temp_max"
-        android:layout_width="wrap_content"
+        android:id="@+id/weather_rain"
+        android:layout_width="56dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintStart_toEndOf="@+id/weather_temp_min"
-        app:layout_constraintTop_toBottomOf="@+id/weather_temp_day"
-        tools:text="26°C" />
+        android:layout_marginEnd="16dp"
+        android:textAlignment="viewEnd"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="5mm" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
