added binding detail

--- a/app/src/main/res/layout/fragment_detailed_weather.xml
+++ b/app/src/main/res/layout/fragment_detailed_weather.xml
@@ -6,6 +6,7 @@
     tools:context=".fragments.DetailedWeatherFragment">
 
     <TextView
+        android:id="@+id/weather_day"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="Hello" />
