--- a/app/src/main/res/layout/fragment_detailed_weather.xml
+++ b/app/src/main/res/layout/fragment_detailed_weather.xml
@@ -82,7 +82,7 @@
                 android:id="@+id/button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Open in maps" />
+                android:text="Button" />
         </LinearLayout>
     </ScrollView>
 
