--- a/app/src/main/res/layout/fragment_detailed_weather.xml
+++ b/app/src/main/res/layout/fragment_detailed_weather.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background"
+    android:id="@+id/detail_screen"
     tools:context=".fragments.DetailedWeatherFragment">
 
     <ScrollView
@@ -82,7 +83,13 @@
                 android:id="@+id/button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Button" />
+                android:text="Open in maps" />
+
+            <Button
+                android:id="@+id/button_wallpaper"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Change background" />
         </LinearLayout>
     </ScrollView>
 
