--- a/app/src/main/res/layout/fragment_detailed_weather.xml
+++ b/app/src/main/res/layout/fragment_detailed_weather.xml
@@ -3,8 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
-    android:id="@+id/detail_screen"
     tools:context=".fragments.DetailedWeatherFragment">
 
     <ScrollView
@@ -22,16 +20,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="City"
-                android:textColor="#FFFFFF"
                 android:textSize="22sp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="25dp"
-                android:orientation="horizontal"
-                android:baselineAligned="false">
+                android:baselineAligned="false"
+                android:orientation="horizontal">
 
                 <LinearLayout
                     android:layout_width="0dp"
@@ -45,16 +41,14 @@
                         android:id="@+id/temperatureTextView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="15"
-                        android:textColor="#FFFFFF"
-                        android:textSize="52sp" />
+                        android:textSize="52sp"
+                        tools:text="15" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="top"
                         android:text="\u2103"
-                        android:textColor="#FFFFFF"
                         android:textSize="22sp" />
                 </LinearLayout>
 
@@ -66,47 +60,17 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="25dp"
                 android:gravity="center"
-                android:text="Condition"
-                android:textColor="#FFFFFF"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                tools:text="Condition" />
 
             <TextView
                 android:id="@+id/minMaxTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="Description"
-                android:textColor="#FFFFFF"
-                android:textSize="14sp" />
-
-            <Button
-                android:id="@+id/button_wallpaper"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Change background" />
+                android:textSize="14sp"
+                tools:text="Description" />
         </LinearLayout>
     </ScrollView>
-
-    <LinearLayout
-        android:id="@+id/myLoadingLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#33000000"
-        android:clickable="true"
-        android:focusable="true"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:visibility="gone">
-
-        <ProgressBar
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Loading data. Please wait..."
-            android:textColor="#FFFFFF" />
-    </LinearLayout>
 
 </FrameLayout>
